--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,93 @@
-Hello World
+html {
+    background-image: url("photos/IMG_3001.JPG");
+}
+
+body {
+    
+    background-color: transparent; 
+    margin: 0px 50px;
+}
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 36px;
+    text-align: center;
+    font-weight: 1000;
+    color:#345593;
+}
+h2 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 28px;
+    font-weight: 1000;
+    color: #345593;
+    text-decoration: underline;
+}
+p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    color: #116cb6;
+    text-align: start;
+}
+p1{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+    color: #428362;
+    text-align: start;
+}
+
+a:link{
+  color:#684fb5;
+}
+a:visited{
+  color: #215959;
+}
+a:hover{
+  color: #538989;
+}
+
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.logo{
+    height: 60px;
+    width: 200px;
+    transform: translateX(-30px); 
+}
+nav ul{
+  z-index: 1000;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+nav ul li a {
+  position: relative;
+  text-decoration: none;
+  color: #684fb5;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+}
+nav ul li a::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #729d8e;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
+}
+nav ul li a:hover::after{
+  width: 100%;
+}
+
+.contact{
+  position: relative;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  flex-direction: row;
+}
